--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,6 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Overview of our DRDM model for person image composition"
+excerpt: "(a) DRDM consists of the BSDB, pose encoder $E_{p}$, and noise prediction block $\mathcal{H}_{N}$.(b) We design a disentangled classifier-free guided sampling, which amplifies the conditional signals of texture and pose based on parsing map, ensuring a close alignment between the appearance of the generated person image and the target pose. <br/><img src='/images/drdm.png'>"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
